--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -19,6 +19,7 @@ Based on this overview, we deduce the following domains to analyze query logs:
 
 \section{Query Classification}\label{sec:query_classification}
 A common approach to refine search results is a preceding classification of the search query. Different ideas regarding what taxonomy of search queries would be useful to refine search results exist. 
+
 \subsection*{Query Intent}\label{sec:query_intent}
 One of the most prominent approaches is the idea to understand the intent behind a query and classify it accordingly. The idea of \citet{broder:2002} to focus on the intent and distinguish between navigational, informational, and transactional queries was widely adopted. According to \citet{broder:2002}, navigational queries are used to find a specific website, informational queries are used to find information about a topic, and transactional queries are used to perform a transaction, such as purchasing a product or download a file. \citet{rose:2004} and \citet{kang:2003} as well emphasize the importance of understanding the user's intent behind a query and adopt the taxonomy of \citet{broder:2002}. Those early approaches measure, among others, conditional probabilities of terms being present in a certain category and use them for classification. \citet{alexander:2022} further refine the taxonomy of \citet{broder:2002} and introduce a more fine-grained classification of informational queries. They subdivde the informational category into instrumental (i.e., how to do sth.), factual (search of facts or pieces of information) and abstain (rest of informational queries). 
 
@@ -51,12 +52,12 @@ Despite its usefulness, the usage of Google Trends data entails some limitations
 
 In summary, we can state that comparing the popularity of different queries with data from Google Trends is feasible and valuable since we can assess temporal patterns. However, we need to be careful which queries and what time spans we choose. Considering the findings of \citet{behnen:2020}, a comparison of queries with high search volume and large time spans is reasonable.
       
-\section{Sentence Embeddings}\label{sec:sentence_embeddings}
-With the advent of the transformer architecture, a significant push of language models was initiated~\citep{zhao:2022}. The transformer architecture allows to train models on large-scale general text data, equipping such models with broad language comprehension~\citep{vaswani:2017}. As a next step, these pretrained language models are usually fine-tuned on downstream tasks, e.g., in information retrieval. That is, the language comprehension of the model is shifted to a specific task. 
+% \section{Sentence Embeddings}\label{sec:sentence_embeddings}
+% With the advent of the transformer architecture, a significant push of language models was initiated~\citep{zhao:2022}. The transformer architecture allows to train models on large-scale general text data, equipping such models with broad language comprehension~\citep{vaswani:2017}. As a next step, these pretrained language models are usually fine-tuned on downstream tasks, e.g., in information retrieval. That is, the language comprehension of the model is shifted to a specific task. 
 
-\citet{reimers:2019} further refined the architecture of such language models to pave the way for rich and efficient sentence embeddings. Rich in this case means that the embeddings encode the content of an input-text fairly well. Efficient means that the embeddings can be computed and used for further compuations with a feasible time complexity. The architecture of \citet{reimers:2019} as well is desinged for fine-tuning on downstream tasks. In information retrieval, such models are fine-tuned on the task of semantic search. Given a query, the task is to retrieve texts that are semantically similar to the query. Both, the query and the texts are encoded into embeddings and the semantic similarity can be measured via, e.g., cosine similarty of the embeddings in the latent space. 
+% \citet{reimers:2019} further refined the architecture of such language models to pave the way for rich and efficient sentence embeddings. Rich in this case means that the embeddings encode the content of an input-text fairly well. Efficient means that the embeddings can be computed and used for further compuations with a feasible time complexity. The architecture of \citet{reimers:2019} as well is desinged for fine-tuning on downstream tasks. In information retrieval, such models are fine-tuned on the task of semantic search. Given a query, the task is to retrieve texts that are semantically similar to the query. Both, the query and the texts are encoded into embeddings and the semantic similarity can be measured via, e.g., cosine similarty of the embeddings in the latent space. 
 
-In this work, we employ sentence embeddings to compare the semantic similarity of queries. We use sentence embeddings of models that are fine-tuned on the task of semantic search. We expect those models to encode query semantics particularly well. However, two variations in semantic search exist: Symmetric and asymmetric semantic search. Symmetric semantic search focuses on encoding semantic similarites between texts of similar lengths. Asymmetric semantic search, though, is constrained to encode query-document similarities, i.e. similarities between texts of different lengths. In this work, we are interested in query-query similarities, i.e., similarties between textes of similar lengths. Hence, we employ symmetric semantic search embeddings. To elaborate on this, \citet{zhao:2022} state that asymmetric semantic search models are error-prone to query variations such as misspellings or small semantic changes. They mention that dense retrievers, which employ asymmetric semantic search, are known to be less robust to such variations. From this, we conclude that asymmetric semantic search models do not encode query-query similarities well enough and we focus on symmetric semantic search embeddings in this work.
+% In this work, we employ sentence embeddings to compare the semantic similarity of queries. We use sentence embeddings of models that are fine-tuned on the task of semantic search. We expect those models to encode query semantics particularly well. However, two variations in semantic search exist: Symmetric and asymmetric semantic search. Symmetric semantic search focuses on encoding semantic similarites between texts of similar lengths. Asymmetric semantic search, though, is constrained to encode query-document similarities, i.e. similarities between texts of different lengths. In this work, we are interested in query-query similarities, i.e., similarties between textes of similar lengths. Hence, we employ symmetric semantic search embeddings. To elaborate on this, \citet{zhao:2022} state that asymmetric semantic search models are error-prone to query variations such as misspellings or small semantic changes. They mention that dense retrievers, which employ asymmetric semantic search, are known to be less robust to such variations. From this, we conclude that asymmetric semantic search models do not encode query-query similarities well enough and we focus on symmetric semantic search embeddings in this work.
 
 
 \section{Wasserstein Distances} \label{sec:wasserstein_distances}
@@ -64,10 +65,4 @@ To evaluate the resulting distributions of this works's experiments, we need met
 \begin{equation}
 W_p(\mu, \nu)=\inf_{\substack{X \sim \mu\\ Y \sim \nu}} \left(\mathbb{E}\|X-Y\|^p\right)^{1 / p}, \quad p \geq 1
 \end{equation}
-where the infimum is taken over all pairs of $d$-dimensional random vectors $X$ and $Y$ marginally distributed as $\mu$ and $\nu$~\citep{panaretos:2019}. An intuitive idea of what Wasserstein distances measure would be the minimuim effort to make two distributions coincide. They originally stem from the theory of optimal transport where one tries to find the optimal way to transport a distribution of mass to another distribution of mass~\citep{panaretos:2019}. Conveniently, Wasserstein distances satisfy all properties of a metric, i.e., non-negativity, symmetry and validity of the triangle inequality~\citep{panaretos:2019}. This makes Wasserstein distances suitable for comparisons between distributions. Wasserstein distances even generalize to probability measures defined on much more general spaces: if $(\mathcal{X}, \rho)$ is any complete metric space, then the $p$-Wasserstein distance can be defined in the same way, with $\|X-Y\|$ replaced by the metric $\rho(X,Y)$~\citep{panaretos:2019}. That is, the distance is able to inherit the metric that is already defined in the space of the considered distributions.  
-
-% \begin{equation}
-%     % \inf_{\substack{X \sim \mu\\ Y \sim \nu}}
-%     % \left(E\|X-Y\|^p\right)^{1 / p}
-%     \mathbb{E}
-% \end{equation}
+where the infimum is taken over all pairs of $d$-dimensional random vectors $X$ and $Y$ marginally distributed as $\mu$ and $\nu$~\citep{panaretos:2019}. An intuitive idea of what Wasserstein distances measure would be the minimuim effort to make two distributions coincide. They originally stem from the theory of optimal transport where one tries to find the optimal way to transport a distribution of mass to another distribution of mass~\citep{panaretos:2019}. Conveniently, Wasserstein distances satisfy all properties of a metric, i.e., non-negativity, symmetry and validity of the triangle inequality~\citep{panaretos:2019}. This makes Wasserstein distances suitable for comparisons between distributions. Wasserstein distances even generalize to probability measures defined on much more general spaces: if $(\mathcal{X}, \rho)$ is any complete metric space, then the $p$-Wasserstein distance can be defined in the same way, with $\|X-Y\|$ replaced by the metric $\rho(X,Y)$~\citep{panaretos:2019}. That is, the distance is able to inherit the metric that is already defined in the space of the considered distributions which gives a natural interpretation of Wasserstein distances.  
