--- a/thesis/evaluation.tex
+++ b/thesis/evaluation.tex
@@ -1,3 +1,15 @@
 \chapter{Discussion}
 
+In this chapter we briefly discuss the results of the three parts structure-related, inference-based and temporal-based analysis. We summarize the results and give an outlook on future work.
+\section*{Structure-related Analysis}
+The structure-related analysis shows that the AQL exhibits similar distributions especially for the rank-size distribuitions of linguistic elements. In this regard, the AQL fits to the comparison group sinc its mean Wasserstein distance is smaller than the mean Wasserstein distance of the comparison group. Concerning length-related measurements of linguistic elements we can observe rather dissimilar distributions. For all considered length-related measurements the AQL exhibits a higher mean Wasserstein distance than the comparison group. Especially the distribution of characters per query seems anomalous. Moreover, the top queries of the AQL are quite different from the top queries of the AOL, which is our only reference point in this regard. It is striking that the most popular queries in the AQL seem quite random and are even hard to interpretate whereas the top queries of the AOL are easy to understand and make sense. For the top words in turn, the AQL is arguably similar to the comparison group. We can detect an average intersection of 9 words of the top 25 words between AQL and the comparison group. However, the average intersection of top words within the comparison group is even higher with 12 words. As a last aspect, we analyzed the presence of search operators in the query logs. However this comparison lacks meaningfulness as search operators were barely found in the comparison group. The absence of search operatos in the comparison group is due to preceding filtering processes during data generation. 
 
+In summary, one could argue that similrities were found in the structure-related analysis, but the AQL is rather not on par with the comparison group. 
+\section*{Inference-based Analysis}
+The inference-based analysis shows that the AQL exhibits similar distributions especially for its query intent and question distributions. In this case, a lower Wasserstein distance than the comparison group was found. Concerning the distribuition of PII entities, we can observe rather dissimilar distributions. The AQL exhibits a higher mean Wasserstein distance than the comparison group. Summarizing the results, we can argue that the AQL is similar to the comparison group since it matches the distributions of the comparison group in two of the three cases. 
+
+\section*{Temporal-based Analysis}
+The temporal-based analysis shows that the AQL exhibits a very different temporal query popularities compared to the comparison group. From the list of top 25 monthly google queries, we could find overall low correlations of temporal patterns between AQL queries and google queries. The highest found correlation is 0.4 which is not significant. the correlation of most query popularities are around 0, indicating dissimilar temporal patterns. Regarding the annual top queries, we could observe only a tiny intersection of AQL queries and google queries. 
+
+\section*{Future Work}
+In this work we have characterized queries by structural features, temporal correlations and some prevalent taxonomies. To capture even more information of queries, especially semantic information, one could employ sentence embedding models that are used for semantic search. These models have shown to create meaningful representations of text semantics and could be used to compare embedding distributions of the AQL with the comparison group. This may be done by measuring Wasserstein distances or one could perform clustering algorithms on the embeddings to detect present topics in the query logs. 
