--- a/src/thesis_schneg/preprocess.ipynb
+++ b/src/thesis_schneg/preprocess.ipynb
@@ -61,7 +61,6 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "base_path = Path(\n",
     "    \" /mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/google_trends/monthly/\")\n",
     "\n",
@@ -516,7 +515,6 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "base_path = Path(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/google_trends/time-series/\")\n",
     "\n",
@@ -567,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
