src: read multiple datasets added

--- a/thesis/analysis.tex
+++ b/thesis/analysis.tex
@@ -87,7 +87,7 @@ This is probably due to their language distribution. AQL and MS-MARCO Web Search
 \end{figure}
 
 \subsubsection{Numeric Comparison: Linguistic Elements}\label{sec:ling-elements-numeric-comparison}
-The distributions of linguistic elements are now compared numerically to each other. To evaluate similarities between the resulting distributions, we apply the \hyperref[sec:wasserstein_distances]{Wasserstein distance} with $p=1$. For each analysis, we compute the Wasserstein distance between the distributions of all pairs of query logs. In Table~\ref{tab:ws-distances-elements} the obtained Wasserstein distances are displayed with regard to the conducted analysis. To assess if the AQL's distributions are similar or rather anomalous, we first calculate the average Wasserstein distance of the comparison group, i.e., AOL, MS-MARCO Web Search and ORCAS. We denote the average Wasserstein distance of the group excluding the AQL by $W_\mu(\overline{AQL})$. Secondly, we determine the average Wasserstein distance between the AQL and the other query logs. For this we consider all possible pairs that contain the AQL and one of the other query logs. We call this average Wasserstein distance $W_\mu(AQL)$. If $W_\mu(AQL) \leq W_\mu(\overline{AQL})$ is true, we can argue that the AQL's distributions are similar enough to be considered a part of the comparison group. If ths is not the case, we can conclude that there are significant differences. For a further evaluation, we compute the standard deviation of the Wasserstein distances within the comparison group. We denote the standard deviation of distances within the group excluding the AQL by $\sigma_{\overline{AQL}}$. This allows us to put differences of $W_\mu(AQL)$ and $W_\mu(\overline{AQL})$ into the perspective of average deviations within the comparison group. In all three cases, named entities, words and characters, $W_\mu(AQL)$ is smaller than $W_\mu(\overline{AQL})$. This indicates that the AQL's distributions are similar to the comparison group, suggesting an non-anomalous behaviour of rank-size distributions of linguistic elements when compared to ``true'' query logs.
+The distributions of linguistic elements are now compared numerically to each other. To evaluate similarities between the resulting distributions, we apply the \hyperref[sec:wasserstein_distances]{Wasserstein distance} with $p=1$. For each analysis, we compute the Wasserstein distance between the distributions of all pairs of query logs. In Table~\ref{tab:ws-distances-elements} the obtained Wasserstein distances are displayed with regard to the conducted analysis. To assess if the AQL's distributions are similar or rather anomalous, we first calculate the average Wasserstein distance of the comparison group, i.e., AOL, MS-MARCO Web Search and ORCAS. We denote the average Wasserstein distance of the group excluding the AQL by $W_\mu(\overline{AQL})$. Secondly, we determine the average Wasserstein distance between the AQL and the other query logs. For this we consider all possible pairs that contain the AQL and one of the other query logs. We call this average Wasserstein distance $W_\mu(AQL)$. If $W_\mu(AQL) \leq W_\mu(\overline{AQL})$ is true, we can argue that the AQL's distributions are similar enough to be considered a part of the comparison group. If this is not the case, we can conclude that there are significant differences. For a further evaluation, we compute the standard deviation of the Wasserstein distances within the comparison group. We denote the standard deviation of distances within the group excluding the AQL by $\sigma_{\overline{AQL}}$. This allows us to put differences of $W_\mu(AQL)$ and $W_\mu(\overline{AQL})$ into the perspective of average deviations within the comparison group. In all three cases, named entities, words and characters, $W_\mu(AQL)$ is smaller than $W_\mu(\overline{AQL})$. This indicates that the AQL's distributions are similar to the comparison group, suggesting an non-anomalous behaviour of rank-size distributions of linguistic elements when compared to ``true'' query logs.
 
 \begin{table}[tb]
     \centering
