--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -1,5 +1,5 @@
 \chapter{Background}
-In this chapter we review some aspects of the literature that are relevant to this work. In particular, we describe prevalent analyses of search logs that have been conducted in the past and their motivations. This includes simple syntactical analyses of the queries as well as the classification into meaningful taxonomies. We discuss whether these analyses would contribute to the objective of this work. Furthermore, as an additional background to the temporal analysis in this work, we critically point out limitations of utilizing data from Google Trends\footnote{\url{https://trends.google.com/trends/}} to investigate temporal patterns in query logs. Thereon, we elaborate on sentence embeddings and their potential usage in this work. Finally, we introduce Wasserstein distances as a method to compare distributions. 
+In this chapter we review some aspects of the literature that are relevant to this work. In particular, we describe prevalent analyses of search logs that have been conducted in the past and their motivations. This includes simple syntactical analyses of the queries as well as the classification into meaningful taxonomies. We discuss whether these analyses would contribute to the objective of this work. Furthermore, as an additional background to the temporal analysis in this work, we critically point out limitations of utilizing data from Google Trends\footnote{\url{https://trends.google.com/trends/}} to investigate temporal patterns in query logs. Finally, we introduce Wasserstein distances as a method to compare distributions. 
 
 \section{Traditional Query Log Analysis}\label{sec:traditional_query_log_analysis}
 With the increasing advent of the internet during the late 1990s, search engines became an essential tool for users to navigate the web. This led to a growing interest in understanding the behavior of users when searching the web and hence an interest to study search queries. A lot of publications from this time investigate query logs to understand user behavior and the differences between information retrieval on the web and traditional information retrieval. 
