--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[english,master,fsu]{webisthesis} % Jena
+\documentclass[english,master,fsu,web]{webisthesis} % Jena
 % \documentclass[german,master,buw]{webisthesis} % Weimar
 % \documentclass[german,bachelor,ul]{webisthesis} % Leipzig
 % \documentclass[german,master,buw,web]{webisthesis} % Weimar, for web page
@@ -67,7 +67,7 @@
   \usepackage{fontspec} % for pgf plots (added 12/14/2024)
 \fi % for pgf plots (added 12/14/2024)
 \makeatletter\@ifpackageloaded{underscore}{}{\usepackage[strings]{underscore}}\makeatother % for pgf plots (added 12/14/2024)
-\usepackage{layouts} % to print /textwidth
+% \usepackage{layouts} % to print /textwidth
 
 \usepackage{comment} % for commenting (added 2/22/2025)
 % \includecomment{comment}
@@ -102,11 +102,11 @@
 % \begin{sloppypar}
 \begin{frontmatter}
 \begin{abstract}
-This thesis aims to analyze the Archive Query Log (AQL), a query log of unknown source, and examine if it reflects realistic user behavior or if its query distribution is rather anomalous. To accomplish this, we compare it to other publicly available query logs, which are collected from real-world logs. We consider the AOL Log, the MS-MARCO Web Search Log and the ORCAS Log. The comparison is based on various metrics that aim to capture distinctive characteristics of a query log. 
+This thesis aims to analyze the Archive Query Log (AQL), a query log of unknown source, and examines if it reflects realistic user behavior or if its query distribution is rather anomalous. To accomplish this, we compare it to other publicly available query logs, which are collected from real-world logs. We consider the AOL Log, the MS-MARCO Web Search Log and the ORCAS Log. The comparison is based on various metrics that aim to capture distinctive characteristics of a query log. 
 
-The analysis in this thesis is composed of three parts: structure-related, inference-based and temporal-based analysis. For each part we measure distributions of the query logs and compare them to each other. The numeric comparison is based on Wasserstein distances, a method to measure similarities of probability distributions. Besides the numeric comparison of distributions we provide concrete insights, displaying tables of top queries, top words and visualizations of temporal patterns.
+The analysis in this thesis is composed of three parts: a structure-related, an inference-based and a temporal-based analysis. For each part we measure distributions of the query logs and compare them to each other. The numeric comparison is based on Wasserstein distances, a method to measure similarities of probability distributions. Besides the numeric comparison of distributions we provide concrete insights, displaying tables of top queries, top words and visualizations of temporal patterns.
 
-The results show that the AQL exhibits similar distributions to the other query logs, but the similarity lacks magnitude to conclude that the AQL belongs to the comparison group. Furthermore, temporal pattens of the AQL are substantially different to the temporal patterns present in real-word query logs. 
+The results show that the AQL exhibits similar distributions to the other query logs, but the similarity lacks magnitude to conclude that the AQL belongs to the comparison group. Furthermore, temporal pattens of the AQL are substantially different from the temporal patterns present in real-word query logs. 
 
 \end{abstract}
 
@@ -130,9 +130,7 @@ The results show that the AQL exhibits similar distributions to the other query 
 \include{datasets}
 \include{analysis}
 \include{evaluation}
-% \include{conclussion}
 
-% \include{appendixA}
 
 % Bibliography
 \bibliographystyle{plainnat} % requires package natbib. An alternative is apalike
