refactored code: seperated thesis_schneg into several folders

--- a/src/process-results/inference_studies.ipynb
+++ b/src/process-results/inference_studies.ipynb
@@ -10,7 +10,9 @@
     "## Frequencies of Linguistic Elements\n",
     "To assess the similarity of the resulting distributions, we compute the [*Wasserstein-Metric*](https://en.wikipedia.org/wiki/Wasserstein_metric) of each pair of distributions.\n",
     "The Wasserstein-Metric is a distance function for probability distributions. It satisfies the criteria of actual metrics and thus enables comparisons between probability distributions. Assuming one-dimensional distributions, the Wasserstein Distance of two empirical samples $P$ and $Q$ with respective random vectors $X_1,...,X_n$ and $Y_1,...,Y_n$ is given by:\n",
-    "$$ W_{p}(P,Q)=\\left({\\frac {1}{n}}\\sum _{i=1}^{n}\\|X_{(i)}-Y_{(i)}\\|^{p}\\right)^{\\frac {1}{p}}$$ \n",
+    "\n",
+    "$W_{p}(P,Q)=\\left({\\frac{1}{n}}\\sum_{i=1}^{n}\\|X_{(i)}-Y_{(i)}\\|^{p}\\right)^{\\frac{1}{p}}$ \n",
+    "\n",
     "Let's compute the Wasserstein-Metric for the distributions of query intent, PII Entity Labels and Questions\n"
    ]
   },
